--- a/index.jade
+++ b/index.jade
@@ -17,6 +17,7 @@
         - var wx_str = #{wx_str};
         - var wx_sig = #{wx_sig};
     </script>
+	<script src="bin-debug/sha.js"></script>
     <!--modules_files_start-->
 	<script egret="lib" src="libs/modules/egret/egret.min.js" src-release="libs/modules/egret/egret.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/egret.web.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>
