--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,11 +12,7 @@
     <style>
         html, body { -ms-touch-action: none; background: #888888; padding: 0; border: 0; margin: 0; height: 100%; }
     </style>
-    <script>
-        - var wx_ts = #{wx_ts};
-        - var wx_str = #{wx_str};
-        - var wx_sig = #{wx_sig};
-    </script>
+	<script src="bin-debug/sha.js"></script>
     <!--modules_files_start-->
 	<script egret="lib" src="libs/modules/egret/egret.min.js" src-release="libs/modules/egret/egret.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/egret.web.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>
@@ -47,6 +43,9 @@
          data-log-filter="" data-show-fps-style="x:0,y:0,size:30,textColor:0x00c200,bgAlpha:0.9">
     </div>
     <script>
+        document.wx_ts = '<%=wx_ts%>';
+        document.wx_str = '<%=wx_str%>';
+        document.wx_sig = '<%=wx_sig%>';
         egret.runEgret();
     </script>
 	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_5949997'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/stat.php%3Fid%3D5949997' type='text/javascript'%3E%3C/script%3E"));</script>
