优化不同服务器上部署时自动适用环境

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,6 +48,10 @@
         document.wx_ts = '<%=wx_ts%>';
         document.wx_str = '<%=wx_str%>';
         document.wx_sig = '<%=wx_sig%>';
+        document.wx_title = '<%=wx_title%>';
+        document.wx_desc = '<%=wx_desc%>';
+        document.wx_link = '<%=wx_link%>';
+        document.wx_img = '<%=wx_img%>';
         egret.runEgret();
 
         function shareFriend() {
