--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,9 +43,9 @@
          data-log-filter="" data-show-fps-style="x:0,y:0,size:30,textColor:0x00c200,bgAlpha:0.9">
     </div>
     <script>
-        document.wx_debug = '<%=wx_debug%>';
+        document.wx_debug = <%=wx_debug%>;
         document.wx_appid = '<%=wx_appid%>';
-        document.wx_ts = '<%=wx_ts%>';
+        document.wx_ts = <%=wx_ts%>;
         document.wx_str = '<%=wx_str%>';
         document.wx_sig = '<%=wx_sig%>';
         document.wx_title = '<%=wx_title%>';
