add client commit data to server

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,8 @@
 	<script egret="lib" src="libs/modules/egret/egret.web.min.js" src-release="libs/modules/egret/egret.web.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/egret3d.min.js" src-release="libs/modules/egret/egret3d.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/socket.min.js" src-release="libs/modules/egret/socket.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/game.js" src-release="libs/modules/egret/game.js"></script>
+	<script egret="lib" src="libs/modules/egret/game.web.js" src-release="libs/modules/egret/game.web.js"></script>
 	<!--modules_files_end-->
 	<script egret="lib" src="libs/modules/weixin/weixinapi.min.js" src-release="libs/modules/weixin/weixinapi.min.js"></script>
 	<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js" ></script>
