--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
 	<script egret="lib" src="libs/modules/egret/socket.min.js" src-release="libs/modules/egret/socket.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/game.min.js" src-release="libs/modules/egret/game.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/game.web.min.js" src-release="libs/modules/egret/game.web.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/nest.js" src-release="libs/modules/egret/nest.min.js"></script>
 	<!--modules_files_end-->
 	<script egret="lib" src="libs/modules/weixin/weixinapi.min.js" src-release="libs/modules/weixin/weixinapi.min.js"></script>
 	<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js" ></script>
