--- a/views/index_nest.ejs
+++ b/views/index_nest.ejs
@@ -45,16 +45,9 @@
          data-log-filter="" data-show-fps-style="x:0,y:0,size:30,textColor:0x00c200,bgAlpha:0.9">
     </div>
     <script>
-        nest.core.startup({'debug':<%=nt_debug%>, 'egretAppId':<%=nt_appid%>, 'version':<%=nt_version%>}, function (data) {
-            if(data.result == 0) {
-                console.log("初始化Nest成功。");
-                egret.runEgret();
-            }
-            else {
-                console.log("初始化Nest失败。");
-                console.log(data);
-            }
-        });
+        //var nest_info = {'debug':<%=nt_debug%>, 'egretAppId':<%=nt_appid%>, 'version':<%=nt_version%>};
+        aw.regNest(<%=nt_debug%>, <%=nt_appid%>, <%=nt_version%>);
+        egret.runEgret();
     </script>
 	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_5949997'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/stat.php%3Fid%3D5949997' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
