refine db; define platform and channel info

--- a/views/index_nest.ejs
+++ b/views/index_nest.ejs
@@ -45,7 +45,7 @@
          data-log-filter="" data-show-fps-style="x:0,y:0,size:30,textColor:0x00c200,bgAlpha:0.9">
     </div>
     <script>
-        aw.regNest(<%=nt_debug%>, <%=nt_appid%>, <%=nt_version%>);
+        aw.regNest(<%=nt_debug%>, <%=nt_appid%>, <%=nt_version%>, <%=nt_channel%>);
         egret.runEgret();
     </script>
 	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_5949997'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/stat.php%3Fid%3D5949997' type='text/javascript'%3E%3C/script%3E"));</script>
