add eget stat api

--- a/views/index_nest.ejs
+++ b/views/index_nest.ejs
@@ -20,7 +20,8 @@
 	<script egret="lib" src="libs/modules/egret/socket.min.js" src-release="libs/modules/egret/socket.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/game.min.js" src-release="libs/modules/egret/game.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/game.web.min.js" src-release="libs/modules/egret/game.web.min.js"></script>
-	<script egret="lib" src="libs/modules/egret/nest.js" src-release="libs/modules/egret/nest.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/nest.min.js" src-release="libs/modules/egret/nest.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/egretsa.min.js" src-release="libs/modules/egret/egretsa.min.js"></script>
 	<!--modules_files_end-->
     <!--game_files_start-->
 	<script egret="game" src="bin-debug/ExtraE3D.min.js"></script>
